--- a/style.css
+++ b/style.css
@@ -1,19 +1,73 @@
+body{
+	margin: auto;
+	height: auto;
+}
 #Onglets{
 	display: flex;
 	justify-content: flex-end;
+	margin: 15px 15px 0em 0;
 }
 #Logo{
     display: flex;
     justify-content: center;
     align-items: center;
+		margin: 100px 0px 1em 0;
 }
 .Box{ display: flex;
     justify-content: center;
     align-items: center;
 }
-#Button{ display: flex;
-    justify-content: center;
+#Buttons{ display: flex;
+    justify-content: space-around;
     align-items: center;
 }
 
+#Country{
+	margin: 250px 0px 0 10px;
+	height: 35px;
+	background-color: #F2F2F2;
+	border-style: solid;
+	border-color: #E4E4E4;
+	border-width: thin;
+}
 
+.Searchbox{
+	display: flex;
+	justify-content: center;
+}
+
+input[type=text] {
+	width: :130px;
+	-webkit-transition: width 0.4. ease-in-out;
+	transition: width 0.4 ease-in-out;
+}
+
+input[type=text]:focus {
+	width: 100%;
+	align-items: center;
+}
+
+
+footer{
+	display: flex;
+}
+
+#Country{
+	display: flex;
+}
+
+.Footer
+{
+	display: flex;
+	margin: 0 0 0 10px;
+	background-color: #F2F2F2;
+	border-style: solid;
+	border-color: #E4E4E4;
+	border-width: thin;
+	height: 60px;
+}
+
+.Footer:nth-child(3)
+{
+	flex: 1;
+}
